--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
+title: Brexit Daily News
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   BrexitDaily! El sitio donde encontras todo lo que necesitas saber de los acuerdos entre España (entre otros) y el Reino Unido.
