--- a/_config.yml
+++ b/_config.yml
@@ -108,3 +108,10 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+
+
+analytics:
+provider: "google-gtag"
+google:
+  tracking_id: "UA-29706858-11"
+  anonymize_ip: false # default
