--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Brexit Daily News
-email:
+email: brexitdaily@marioanton.com
 description: >- # this means to ignore newlines until "baseurl:"
   BrexitDaily! El sitio donde encontras todo lo que necesitas saber de los acuerdos entre España (entre otros) y el Reino Unido.
 twitter_username: brexitdaily
