--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   BrexitDaily! El sitio donde encontras todo lo que necesitas saber de los acuerdos entre España (entre otros) y el Reino Unido.
 twitter_username: brexitdaily
 github_username: 
-minimal_mistakes_skin: contrast
+minimal_mistakes_skin: default
 search: true
 
 # Build settings
