--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ plugins:
   - jekyll-archives
 
 author:
-  name   : "Ciudadano"
+  name   : "brexitdaily"
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "Ciudadano residente en Newcastle con ganas de informar."
   location : "NE2"
