--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ analytics:
     anonymize_ip: false # default
 
 teaser: "/assets/images/bio-photo.jpg"
-logo: "/assets/images/bio-photo.jpg"
+#logo: "/assets/images/bio-photo.jpg"
 og_image: "/assets/images/bio-photo.jpg"
 
 breadcrumbs: true  # disabled by default
